<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/logo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src= "@drawable/tonic_logo"/>

    <TextView
        android:id="@+id/question_text_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="24dp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/true_button"
                android:id="@+id/true_button"/>

            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/false_button"
                android:id="@+id/false_button"/>
        </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/back_button"
            android:drawableLeft="@drawable/arrow_left"
            android:drawablePadding="4dp" />

        <Button
            android:id="@+id/next_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/next_button"
            android:drawableRight="@drawable/arrow_right"
            android:drawablePadding="4dp" />
    </LinearLayout>

    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat_button"/>

</LinearLayout>